--- a/.github/ISSUE_TEMPLATE/industrie.yml
+++ b/.github/ISSUE_TEMPLATE/industrie.yml
@@ -1,6 +1,6 @@
 name: Industriekommentare
 description: "Kommentare für Änderungsvoschläge der Industrie"
-title: "Draft_xxx "
+title: "Draft_Smartcards_25_5"
 labels: ["Offen"]
 projects: [""]
 assignees: [""]
